# ComposeNativeTray

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build-natives.yaml  pr-build-check.yml  publish-dokka-doc.yml  publish-on-maven.yml
.run/: DemoAdaptivePosition.run.xml  DemoDynamicTray.run.xml  DemoWithContextMenu.run.xml  DemoWithoutContextMenu.run.xml
config/detekt/: detekt.yml
demo/: build.gradle.kts  proguard-rules.pro
demo/src/jvmMain/kotlin/com/kdroid/composetray/demo/: App.kt  DemoAdaptivePositionWindows.kt  DemoComposableMenu.kt  DemoToggleEmptyMenu.kt  DemoTransparentWindow.kt  DemoWithContextMenu.kt  DemoWithDrawableResources.kt  DemoWithImageVector.kt  DemoWithPainter.kt  DemoWithPlatformSpecificIcons.kt  DemoWithoutContextMenu.kt  DynamicIconsDemo.kt  DynamicTrayMenu.kt  PainterResourceWorkaroundDemo.kt  Screens.kt  TrayAppDemo.kt  UnicodeTrayDemo.kt
demo/src/main/kotlin/com/kdroid/composetray/demo/: DynamicTrayMenu.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
linuxlib/: .gitignore  CMakeLists.txt  QtAppManager.cpp  QtAppManager.h  QtTrayMenu.cpp  QtTrayMenu.h  build.sh  example.c  tray.h  tray_linux.cpp
linuxlib/include/: qtthreadmanager.h  sni_wrapper.h
linuxlib/src/: exemple.c  qtthreadmanager.cpp  sni_wrapper.cpp  statusnotifieritem.cpp
linuxlibdbus/: CMakeLists.txt
linuxlibdbus/include/: sni_wrapper.h  statusnotifieritem.h  statusnotifieritemadaptor.h
linuxlibdbus/src/: main.cpp  sni_wrapper.cpp  statusnotifieritem.cpp  statusnotifieritemadaptor.cpp
linuxlibnew/: Makefile  README.md  go.mod  go.sum  systray.go  systray_menu_unix.go  systray_other.go  systray_unix.go
linuxlibnew/example/: main.go
linuxlibnew/jna/: bridge_linux.go
maclib/: MenuBarModeObserver  MenuBarModeObserver.swift  build.sh  tray.h  tray.swift
src/commonMain/c/: tray.h
src/commonMain/kotlin/com/kdroid/composetray/lib/linux/: GoSystray.kt  LinuxGoTrayManager.kt  LinuxLibTray.kt  LinuxTrayController.kt  LinuxTrayManager.kt  SNIWrapper.kt
src/commonMain/kotlin/com/kdroid/composetray/lib/mac/: MacNativeBridge.kt  MacOSMenuBarThemeDetector.kt  MacOsWindowManager.kt  MacOutsideClickWatcher.kt  MacTrayLoader.kt  MacTrayManager.kt
src/commonMain/kotlin/com/kdroid/composetray/lib/windows/: StdCallCallback.kt  WindowsNativeTray.kt  WindowsNativeTrayLibrary.kt  WindowsNativeTrayMenuItem.kt  WindowsOutsideClickWatcher.kt  WindowsTrayManager.kt
src/commonMain/kotlin/com/kdroid/composetray/menu/api/: TrayMenuBuilder.kt
src/commonMain/kotlin/com/kdroid/composetray/menu/impl/: AwtTrayMenuBuilderImpl.kt  LinuxDBusTrayMenuBuilderImpl.kt  LinuxTrayMenuBuilderImpl.kt  MacTrayMenuBuilderImpl.kt  WindowsTrayMenuBuilderImpl.kt
src/commonMain/kotlin/com/kdroid/composetray/tray/api/: NativeTray.kt  TrayApp.kt  TrayAppState.kt  TrayState.kt  TrayWindowDismissMode.kt
src/commonMain/kotlin/com/kdroid/composetray/tray/impl/: AwtTrayInitializer.kt  LinuxDBusTrayInitializer.kt  LinuxSNITrayInitializer.kt  LinuxTrayInitializer.kt  MacTrayInitializer.kt  WindowsTrayInitializer.kt
src/commonMain/kotlin/com/kdroid/composetray/utils/: AppId.kt  ComposableIconUtils.kt  DarkModeDetector.kt  DebugLn.kt  IconRenderProperties.kt  MenuContentHash.kt  PersistentAnimatedVisibility.kt  SingleInstanceManager.kt  TrayPosition.kt  WindowRaise.kt  WindowVisibilityMonitor.kt
src/commonMain/resources/darwin-aarch64/: libMacTray.dylib
src/commonMain/resources/darwin-x86-64/: libMacTray.dylib
src/commonMain/resources/linux-x86-64/: libdbusmenu-qt5.so.2
src/jvmMain/kotlin/com/kdroid/composetray/lib/linux/: JniRunnable.kt  LinuxLibTray.kt  LinuxNativeBridge.kt  LinuxOutsideClickWatcher.kt  LinuxTrayManager.kt
src/jvmMain/kotlin/com/kdroid/composetray/lib/mac/: MacNativeBridge.kt  MacOSMenuBarThemeDetector.kt  MacOSWindowManager.kt  MacOsWindowManager.kt  MacOutsideClickWatcher.kt  MacTrayManager.kt
src/jvmMain/kotlin/com/kdroid/composetray/utils/: ComposableIconUtils.kt  DarkModeDetector.kt  DebugLn.kt  IconRenderProperties.kt  JarResourceExtractor.kt  MenuContentHash.kt  NativeLibraryLoader.kt  PersistentAnimatedVisibility.kt  SingleInstanceManager.kt  TrayPosition.kt  WindowRaise.kt  WindowVisibilityMonitor.kt
src/main/c/: CMakeLists.txt  tray.h  tray_windows.c
src/main/kotlin/: Main.kt
src/main/kotlin/callbacks/linux/: GCallback.kt
src/main/kotlin/com/kdroid/composetray/demo/: ComposeApp.kt  Demo.kt  Main.kt  MemoryLogger.kt  SampleTray.kt  SwingApp.kt
src/main/kotlin/com/kdroid/composetray/menu/: AwtTrayMenuImpl.kt  LinuxTrayMenuImpl.kt  SwingTrayMenuImpl.kt  TrayMenu.kt  WindowsNativeMenuImpl.kt  WindowsTrayMenuImpl.kt
src/main/kotlin/com/kdroid/composetray/state/: Notification.kt  TrayState.kt
src/main/kotlin/com/kdroid/composetray/tray/: NativeTray.kt  Tray.kt  TrayMenuBuilder.kt
src/main/kotlin/com/kdroid/composetray/utils/: ComposableIconUtils.kt  JarResourceExtractor.kt  PlatformUtils.kt  SingleInstanceWithCallbackChecker.kt  TrayPosition.kt
src/main/kotlin/lib/linux/: AppIndicator.kt  AppIndicatorCategory.kt  AppIndicatorStatus.kt  GObject.kt  Gtk.kt
src/main/kotlin/menu/: AwtTrayMenuImpl.kt  LinuxTrayMenuImpl.kt  SwingTrayMenuImpl.kt  TrayMenu.kt
src/main/kotlin/state/: Notification.kt  TrayState.kt
src/main/kotlin/tray/: Tray.kt
src/main/kotlin/utils/: PlatformUtils.kt
src/native/linux/: Makefile  build.sh  jni_bridge.c  sni.c  sni.h
src/native/linux/icon/: iconunix.go
src/native/linux/jna/: main.go
src/native/macos/: MacTrayBridge.m  build.sh  tray.h  tray.swift
src/native/windows/: CMakeLists.txt  build.bat  jni_bridge.c  tray.h  tray_windows.c
src/test/kotlin/: Demo.kt  NativeTrayIntegrationTest.kt  TrayIntegrationTest.kt  WindowsNativeNativeTrayIntegrationTest.kt  WindowsNativeTrayIntegrationTest.kt  WindowsNativeTrayMenuBuilderIntegrationTest.kt
src/test/kotlin/sample/: App.kt  DemoAdaptivePositionWindows.kt  DemoWithContextMenu.kt  DemoWithoutContextMenu.kt  DynamicTrayMenu.kt  Screens.kt
winlib/: CMakeLists.txt  tray_windows.c
(+73 files in other folders)
